@@ -56,12 +56,9 @@
 
 (unless (find-menu 'reboot-halt-menu)
   (add-sub-menu 'help-menu "Pause" 'reboot-halt-menu "Suspend/Reboot/Halt menu")
-
   (add-menu-key 'reboot-halt-menu "s" 'do-suspend)
   (add-menu-key 'reboot-halt-menu "r" 'do-reboot)
-  (add-menu-key 'reboot-halt-menu "h" 'do-halt)
-  (add-menu-key 'reboot-halt-menu "Return" 'do-suspend)
-  (add-menu-key 'reboot-halt-menu "space" 'do-suspend))
+  (add-menu-key 'reboot-halt-menu "h" 'do-halt))
 
 
 (defun reboot-halt-binding ()
