@@ -25,6 +25,23 @@
 
 (in-package :clfswm)
 
+
+;;; Configuration file
+(defun xdg-config-home ()
+  (pathname-directory (concatenate 'string (or (getenv "XDG_CONFIG_HOME")
+					       (getenv "HOME"))
+				   "/")))
+
+(defun conf-file-name ()
+  (let* ((user-conf (probe-file (merge-pathnames (user-homedir-pathname) #p".clfswmrc")))
+	 (etc-conf (probe-file #p"/etc/clfswmrc"))
+	 (config-user-conf (probe-file (make-pathname :directory (append (xdg-config-home) '("clfswm"))
+						      :name "clfswmrc"))))
+    (or config-user-conf user-conf etc-conf)))
+
+
+
+
 (defun load-contrib (file)
   "Load a file in the contrib directory"
   (let ((truename (concatenate 'string *contrib-dir* "contrib/" file)))
@@ -1254,5 +1271,85 @@ For window: set current child to window or its parent according to window-parent
 	    (#\u unhide-all-windows-in-current-child))
 	 `(,(format nil "Focus window: None")
 	    (#\u unhide-all-windows-in-current-child))))))
+
+
+;;; Configuration variables save
+
+(defun find-symbol-function (function)
+  (with-all-internal-symbols (symbol :clfswm)
+    (when (and (fboundp symbol) (equal (symbol-function symbol) function))
+      (return-from find-symbol-function symbol))))
+
+(defun temp-conf-file-name ()
+  (let ((name (conf-file-name)))
+    (make-pathname :directory (pathname-directory name)
+		   :name (concatenate 'string (pathname-name name) "-tmp"))))
+
+
+(defun copy-previous-conf-file-begin (stream-in stream-out)
+  (loop for line = (read-line stream-in nil nil)
+     while line
+     until (zerop (or (search ";;; ### Internal variables definitions" line) -1))
+     do (format stream-out "~A~%" line)))
+
+(defun copy-previous-conf-file-end (stream-in stream-out)
+  (loop for line = (read-line stream-in nil nil)
+     while line
+     until (zerop (or (search ";;; ### End of internal variables definitions" line) -1)))
+  (loop for line = (read-line stream-in nil nil)
+     while line
+     do (format stream-out "~A~%" line)))
+
+
+
+(defun save-variables-in-conf-file (stream)
+  (let ((all-groups nil)
+	(all-variables nil))
+    (with-all-internal-symbols (symbol :clfswm)
+      (when (is-config-p symbol)
+	(pushnew (config-group symbol) all-groups :test #'string-equal)
+	(push (list symbol (config-group symbol)) all-variables)))
+    (format stream "~2&;;; ### Internal variables definitions                    ### ;;;~%")
+    (format stream ";;; ### You can edit this part when clfswm is not running ### ;;;~%")
+    (format stream "(in-package :clfswm)~2%")
+    (format stream "(setf~%")
+    (dolist (group all-groups)
+      (format stream "  ;; ~A:~%" group)
+      (dolist (var all-variables)
+	(when (string-equal (second var) group)
+	  (format stream "  ~A " (first var))
+	  (let ((value (symbol-value (first var))))
+	    (cond ((or (equal value t) (equal value nil))
+		   (format stream "~S" value))
+		  ((consp value)
+		   (format stream "(quote ~S)" value))
+		  ((symbolp value)
+		   (format stream "'~S" value))
+		  ((functionp value)
+		   (format stream "'~S" (find-symbol-function value)))
+		  ((xlib:color-p value)
+		   (format stream "(->color #x~X)" (color->rgb value)))
+		  (t (format stream "~S" value))))
+	  (terpri stream)))
+      (format stream "~%"))
+    (format stream ")~%")
+    (format stream ";;; ### End of internal variables definitions ### ;;;~%")))
+
+
+
+
+(defun save-configuration-variables ()
+  "Save all configuration variables in clfswmrc"
+  (let ((conffile (conf-file-name))
+	(tempfile (temp-conf-file-name)))
+    (with-open-file (stream-in conffile :direction :input :if-does-not-exist :create)
+      (with-open-file (stream-out tempfile :direction :output :if-exists :supersede)
+	(copy-previous-conf-file-begin stream-in stream-out)
+	(save-variables-in-conf-file stream-out)
+	(copy-previous-conf-file-end stream-in stream-out)))
+    (delete-file conffile)
+    (rename-file tempfile conffile)
+    nil))
+
 
 
